--- a/services.html
+++ b/services.html
@@ -37,10 +37,12 @@
         
 		<div id="content">
             <div id="leftcol">
+                <!--Image on the left side.-->
 				<img src="images/placeholder.jpg" width="300" height="300" alt="Dog">
 			</div>
             
 			<div id="rightcol">
+                <!--Three sections explaining the services.-->
 				<h2>Services</h2>
                 <div id="services">
                     <h3><a href="pricing.html">Pricing</a></h3> 
