--- a/testimonials.html
+++ b/testimonials.html
@@ -35,9 +35,10 @@
                 </ul>
             </div>
         </nav>
-        
+
 		<div id="content">
             <div id="leftcol">
+                <!--This is the section with testimonials.-->
 				<h2>Testimonials</h2>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas 
                    porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies,
@@ -54,6 +55,7 @@
             </div>
             
 			<div id="rightcol">
+                <!--Gallery area containing the dog pictures-->
 				<h2>Gallery</h2>
                 <div id="gallery">
                 <ul>
