--- a/accountEdit.html
+++ b/accountEdit.html
@@ -41,7 +41,8 @@
 				<img src="images/placeholder.jpg" width="250" height="250" alt="placeholder">
 			</div>
 			<div id="rightcol">
-				<h2>Register</h2>
+				<h2>Account</h2>
+				<!--Form for editting account information-->
 					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<fieldset>
 						<legend>Owner</legend>
@@ -87,6 +88,7 @@
 						<input type="text" name="dogbreed" id="dogbreed" size="60" required="required">
 						<br>
 						<br>
+						<!--link adds another dog field for registration form-->
 						<a href="#">Add Dog</a>
 					</fieldset>
 					<br>
