--- a/signIn.html
+++ b/signIn.html
@@ -37,6 +37,7 @@
         
 		<div id="content">
             <div id="leftcol">
+				<!--Sign in form begins here-->
 				<h2>Sign In</h2>
 					<form name="signinform" method="post" id="signinform" action="http://webdevfoundations.net/scripts/formdemo.asp">
 					<label for="email">Email:</label>
@@ -53,8 +54,8 @@
 				</form>
 				<img src="Images/placeholder.jpg" height="250" width="250" alt="placeholder">
 			</div>
-            
 			<div id="rightcol">
+				<!--Regstration form begins here-->
 				<h2>Register</h2>
 					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<fieldset>
@@ -101,6 +102,7 @@
 						<input type="text" name="dogbreed" id="dogbreed" size="60" required="required">
 						<br>
 						<br>
+						<!--link adds another dog field for registration form-->
 						<a href="#">Add Dog</a>
 					</fieldset>
 					<br>
