--- a/account.html
+++ b/account.html
@@ -37,25 +37,26 @@
         
 		<div id="content">
             <div id="leftcol">
-				<img src="images/placeholder.jpg" width="250" height="250">
+				<img src="images/placeholder.jpg" width="250" height="250" alt="placeholder">
 			</div>
             
 			<div id="rightcol">
+				<!--Displays account information-->
 				<h2>Account</h2>
 				<ul>
-						<li><label>First Name: </label></li>
-					<br>
+					<li><label>First Name: </label></li>
+					<li><!--User's first name--></li>
 					<li><label>Last Name: </label></li>
-					<br>
+					<li><!--User's last name--></li>
 					<li><label>Phone Number: </label></li>
-					<br>
+					<li><!--User's phone number--></li>
 					<li><label>Email: </label></li>
-					<br>
+					<li><!--User's email--></li>
 					<li><label>Dog Name: </label></li>
-					<br>
+					<li><!--Dog's name--></li>
 					<li><label>Dog Breed: </label></li>
-					<br>
-					<br>
+					<li><!--Dog's breed--></li>
+					<!--Additional dogs will appear underneath-->
 					<li><a href="accountEdit.html">Edit Account</a></li>
 				</ul>
 			</div>
