--- a/Pricing.html
+++ b/Pricing.html
@@ -38,6 +38,8 @@
 		<div id="content">
             <div id="main">
             <h2 id="price">Pricing</h2>
+
+                <!--Lists services in an unordered list-->
             <div id="leftcol">
 				<h2>Services offered</h2>
                 <ul>
@@ -53,6 +55,7 @@
                     <li>De-Skunking</li>
                 </ul>
 			</div>
+            <!--Creates pricing table-->
 			<div id="rightcol">
                 <table>
                     <tr><th>Size</th>
