Added comments to booking, contactus, and FAQs. I also got rid of unnecessary divs on FAQs.

--- a/FAQs.html
+++ b/FAQs.html
@@ -40,29 +40,33 @@
 			</div>
             
             <div id="rightcol">
+                <!--
+                The questions below are content to linked to their answers.
+                -->
                 <h2>FAQs</h2>
-                    <div id="Questions">
                         <h2>Questions</h2>
                         <ul>
-
+                                <!--
+                                Questions are given ID references to its respected
+                                answers.
+                                -->
                                 <li><a href="#Answer1"><h3>Question 1</h3></a></li>
                                 <li><a href="#Answer2"><h3>Question 2</h3></a></li>
                                 <li><a href="#Answer3"><h3>Question 3</h3></a></li>
                                 <li><a href="#Answer4"><h3>Question 4</h3></a></li>
 
                         </ul>
-                    </div>
-                    <div id="Answers">
                         <h2>Answers</h2>
                             <ul>
-
+                                <!--
+                                This is where the questions are linked to.
+                                -->
                                 <li><a id="Answer1"><h3>Answer 1</h3></a></li>
                                 <li><a id="Answer2"><h3>Answer 2</h3></a></li>
                                 <li><a id="Answer3"><h3>Answer 3</h3></a></li>
                                 <li><a id="Answer4"><h3>Answer 4</h3></a></li>
                                 
                             </ul>
-                    </div>
             </div>
         </div>
         <footer>
