--- a/booking.html
+++ b/booking.html
@@ -41,6 +41,10 @@
                 <img src="images/placeholder.jpg" alt="add image here" width="250" height="250">
             </div>
             <div id="rightcol">
+                <!-- 
+                The form contains the calendar and the time, where the user can input
+                their wanted appointment and submit it into the database.
+                -->
                 <form>
                 <h2>Booking</h2>
                     <label for="Date">Choose a Date</label>
