Added social media links to footer.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -48,7 +48,13 @@
 			</div>
         </div>
 		<footer>
-		    <p>Facebook, Instagram, Twitter</p>
+		    <p>Follow us:</p>
+            <p><a href="#"><img src="Images/facebook.png"
+                 width="50" height="50" alt="Facebook"></a>
+                <a href="#"><img src="Images/instagram.png"
+                 width="50" height="50" alt="instagram"></a>
+                <a href="#"><img src="Images/twitter.png"
+                 width="50" height="50" alt="Twitter"></a></p>
 		</footer>
     </body>
 </html>
