Commented on aboutus.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -34,11 +34,12 @@
         </nav>
         
 		<div id="content">
+            <!--Left column with images of owner -->
             <div id="leftcol">
 				<img src="Images/placeholder.jpg" alt="Owner">
                 <img src="Images/placeholder.jpg" alt="Jojo">
  			</div>
-            
+            <!--Description of owner and jojo-->
 			<div id="rightcol">
 				<h2>About Us</h2>
                 <h3>Owner</h3>
