--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!--Welcome section-->
             <div id="leftcol">
 				<h2>Welcome</h2>
-				<p>Maecenas vel nibh felis. Sed vel enim vel nunc sagittis pharetra at at magna. Vestibulum eu nisl massa. Fusce rhoncus dignissim eros ac sagittis. Cras condimentum felis non est pulvinar fringilla. Duis in dignissim leo, ac consectetur mauris. Aliquam hendrerit, lectus vitae convallis porttitor, nunc justo semper sem, a tristique mauris enim cursus tortor. Mauris sit amet scelerisque nunc. Nam molestie porttitor lorem vel scelerisque. In quis euismod nulla. Aliquam volutpat metus at ex tristique consectetur. Aliquam aliquet bibendum ante in luctus. Nulla convallis urna nec tempus luctus. In eget lectus euismod, semper diam ac, posuere metus.</p>
+				<p>Vivamus purus mi, fringilla id viverra at, blandit finibus orci. In consequat ultrices ante. Aenean sit amet tortor elit. Curabitur et dui sed odio rhoncus mollis non a erat. Nam vitae lacus tincidunt neque accumsan aliquam in et ipsum. Nam lobortis, odio non varius maximus, ex neque viverra quam, eget sollicitudin sapien erat ac tellus. Phasellus lobortis porttitor nibh, eget ullamcorper justo consectetur id.</p>
 				<img src="images/placeholder.jpg" alt="Place image here">
 			</div>
             
@@ -57,7 +57,9 @@
 					<br>
 					<br>
 Maecenas vel nibh felis. Sed vel enim vel nunc sagittis pharetra at at magna. Vestibulum eu nisl massa. Fusce rhoncus dignissim eros ac sagittis. Cras condimentum felis non est pulvinar fringilla. Duis in dignissim leo, ac consectetur mauris. Aliquam hendrerit, lectus vitae convallis porttitor, nunc justo semper sem, a tristique mauris enim cursus tortor. Mauris sit amet scelerisque nunc. Nam molestie porttitor lorem vel scelerisque. In quis euismod nulla. Aliquam volutpat metus at ex tristique consectetur. Aliquam aliquet bibendum ante in luctus. Nulla convallis urna nec tempus luctus. In eget lectus euismod, semper diam ac, posuere metus.
-				</p>
+					<br>
+					<br>
+Vivamus purus mi, fringilla id viverra at, blandit finibus orci. In consequat ultrices ante. Aenean sit amet tortor elit. Curabitur et dui sed odio rhoncus mollis non a erat. Nam vitae lacus tincidunt neque accumsan aliquam in et ipsum. Nam lobortis, odio non varius maximus, ex neque viverra quam, eget sollicitudin sapien erat ac tellus. Phasellus lobortis porttitor nibh, eget ullamcorper justo consectetur id.
 			</div>
         </div>
 
