--- a/Pricing.html
+++ b/Pricing.html
@@ -36,12 +36,9 @@
         </nav>
 
 		<div id="content">
-            <div id="main">
-            <h2 id="price">Pricing</h2>
-
-                <!--Lists services in an unordered list-->
+            <!--Lists services in an unordered list-->
             <div id="leftcol">
-				<h2>Services offered</h2>
+				<p>We offer many services here at Jojo's, including:</p>
                 <ul>
                     <li>Hair Clipping</li>
                     <li>Bathing</li>
@@ -57,11 +54,16 @@
 			</div>
             <!--Creates pricing table-->
 			<div id="rightcol">
+				<h2>Pricing</h2>
                 <table>
-                    <tr><th>Size</th>
+                    <tr>
+						<th>Size</th>
                         <th>Basics</th>
                         <th>Full Groom</th>
                     </tr>
+					<tr>
+						<td colspan="3">&nbsp;</td>
+					</tr>
                     <tr>
                         <td>Small Dogs</td>
                         <td>$30+</td>
@@ -84,7 +86,6 @@
                     </tr>
                 </table>
 			</div>
-        </div>
         </div>
 		<footer>
 		    <p>Follow us:</p>
