--- a/booking.html
+++ b/booking.html
@@ -37,7 +37,7 @@
         
         <div id="content">
             <div id="leftcol">
-                <h2>Book your appointment today!</h2>
+                <p>Book your appointment today!</p>
                 <img src="images/placeholder.jpg" alt="add image here" width="250" height="250">
             </div>
             <div id="rightcol">
