case sensitivity issues fix #1

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming</title>
         <link rel="stylesheet" href="style/base.css" media="screen">
-        <link rel="stylesheet" href="style/printStyle.css" media="print">
+        <link rel="stylesheet" href="style/printstyle.css" media="print">
     </head>
     
     <body>
         
         <!--Sign in/Register link-->
         <div id="signin">
-            <a href="signIn.html">sign in/register</a>
+            <a href="signin.html">sign in/register</a>
         </div>
         <header>
 
@@ -23,7 +23,7 @@
         <nav>
             <div class="dropdown">
                 <ul id="nav">
-                    <li><a href="aboutUs.html">About Us</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="services.html" id="drop">Services</a>
 
@@ -32,7 +32,7 @@
 						    <ul>
                                 <li><a href="pricing.html">Pricing</a></li>
 					            <li><a href="booking.html">Booking</a></li>
-					            <li><a href="FAQs.html">FAQs</a></li>
+					            <li><a href="faqs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
                     <li><a href="contactus.html">Contact Us</a></li>
