--- a/Pricing.html
+++ b/Pricing.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Pricing</title>
         <link rel="stylesheet" href="style/base.css" media="screen">
-        <link rel="stylesheet" href="style/printStyle.css" media="print">
+        <link rel="stylesheet" href="style/printstyle.css" media="print">
     </head>
     
     <body>
         
         <div id="signin">
-            <a href="signIn.html">sign in/register</a>
+            <a href="signin.html">sign in/register</a>
         </div> 
         <header>
 		    <a href="index.html"><h1><img src="Images/logo.png"
@@ -20,14 +20,14 @@
         <nav>
             <div class="dropdown">
                 <ul id="nav">
-                    <li><a href="aboutUs.html">About Us</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="services.html" id="drop">Services</a>
 					    <div class="dropdowncontent">
 						    <ul>
                                 <li><a href="pricing.html">Pricing</a></li>
 					            <li><a href="booking.html">Booking</a></li>
-					            <li><a href="FAQs.html">FAQs</a></li>
+					            <li><a href="faqs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
                     <li><a href="contactus.html">Contact Us</a></li>
