--- a/account.html
+++ b/account.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Account</title>
-        <link rel="stylesheet" href="style/base.css" media="screen">
-        <link rel="stylesheet" href="style/printstyle.css" media="print">
+        <link rel="stylesheet" href="Style/base.css" media="screen">
+        <link rel="stylesheet" href="Style/printstyle.css" media="print">
     </head>
     
     <body>
@@ -41,7 +41,7 @@
 			</div>
             
 			<div id="rightcol">
-				<!--Displays account information-->
+				<!--Displays account information, will appear in place of the Sign In/Register page-->
 				<h2>Account</h2>
 				<ul>
 					<li><label>First Name: </label></li>
