--- a/indexAlt.html
+++ b/indexAlt.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming</title>
-        <link rel="stylesheet" href="style/basealt.css" media="screen">
-        <link rel="stylesheet" href="style/printstyle.css" media="print">
+        <link rel="stylesheet" href="Style/basealt.css" media="screen">
+        <link rel="stylesheet" href="Style/printstyle.css" media="print">
     </head>
     
     <body>
