--- a/signIn.html
+++ b/signIn.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Sign In/Register</title>
-        <link rel="stylesheet" href="style/base.css" media="screen">
-        <link rel="stylesheet" href="style/printstyle.css" media="print">
+        <link rel="stylesheet" href="Style/base.css" media="screen">
+        <link rel="stylesheet" href="Style/printstyle.css" media="print">
     </head>
     
     <body>
