--- a/testimonials.html
+++ b/testimonials.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Testimonials</title>
-        <link rel="stylesheet" href="style/base.css" media="screen">
-        <link rel="stylesheet" href="style/printstyle.css" media="print">
+        <link rel="stylesheet" href="Style/base.css" media="screen">
+        <link rel="stylesheet" href="Style/printstyle.css" media="print">
 
     </head>
     
