--- a/booking.html
+++ b/booking.html
@@ -38,7 +38,7 @@
         <div id="content">
             <div id="leftcol">
                 <p>Book your appointment today!</p>
-                <img src="images/placeholder.jpg" alt="add image here" width="250" height="250">
+                <img src="Images/placeholder.jpg" alt="add image here" width="250" height="250">
             </div>
             <div id="rightcol">
                 <!-- 
