--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="leftcol">
 				<h2>Welcome</h2>
 				<p>Vivamus purus mi, fringilla id viverra at, blandit finibus orci. In consequat ultrices ante. Aenean sit amet tortor elit. Curabitur et dui sed odio rhoncus mollis non a erat. Nam vitae lacus tincidunt neque accumsan aliquam in et ipsum. Nam lobortis, odio non varius maximus, ex neque viverra quam, eget sollicitudin sapien erat ac tellus. Phasellus lobortis porttitor nibh, eget ullamcorper justo consectetur id.</p>
-				<img src="images/placeholder.jpg" alt="Place image here">
+				<img src="Images/placeholder.jpg" alt="Place image here">
 			</div>
             
 			<div id="rightcol">
