--- a/testimonials.html
+++ b/testimonials.html
@@ -47,17 +47,17 @@
 				<h2>Testimonials</h2>
                 <div id="gallery">
                 <ul>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
                  </ul>
                  </div>
