--- a/FAQs.html
+++ b/FAQs.html
@@ -36,7 +36,7 @@
         <div id="content">
             <div id="leftcol">
 				<p>Find the answers to your questions here!<p>
-				<img src="images/placeholder.jpg" alt="add image here" width="250" height="250">
+				<img src="Images/placeholder.jpg" alt="add image here" width="250" height="250">
 			</div>
             
             <div id="rightcol">
