--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
 		<div id="content">
             <div id="leftcol">
                 <!--Image on the left side.-->
-				<img src="images/placeholder.jpg" width="300" height="300" alt="Dog">
+				<img src="Images/placeholder.jpg" width="300" height="300" alt="Dog">
 			</div>
             
 			<div id="rightcol">
