--- a/testimonials.html
+++ b/testimonials.html
@@ -40,6 +40,7 @@
             <div id="leftcol">
                 <!--Testimonials will appear in this <p> tag using JavaScript-->
 				<p>Click on a puppy to view their testimonial!</p>
+				<p id="testimonial"> </p>
             </div>
             
 			<div id="rightcol">
@@ -47,17 +48,17 @@
 				<h2>Testimonials</h2>
                 <div id="gallery">
                 <ul>
-                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog" onclick="puppy01()">
                     </li>
-                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><img src="Images/placeholder2.jpg" width="200" height="200" alt="Dog" onclick="puppy02()">
                     </li>
-                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><img src="Images/placeholder3.jpg" width="200" height="200" alt="Dog" onclick="puppy03()">
                     </li>
-                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><img src="Images/placeholder4.jpg" width="200" height="200" alt="Dog" onclick="puppy04()">
                     </li>
-                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><img src="Images/placeholder5.jpg" width="200" height="200" alt="Dog" onclick="puppy05()">
                     </li>
-                    <li><a href="#"><img src="Images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
+                    <li><img src="Images/placeholder6.jpg" width="200" height="200" alt="Dog" onclick="puppy06()">
                     </li>
                  </ul>
                  </div>
@@ -73,5 +74,25 @@
                 <a href="#"><img src="Images/twitter.png"
                  width="50" height="50" alt="Twitter"></a></p>
 		</footer>
+		<script>
+		function puppy01() {
+			document.getElementById("testimonial").innerHTML = "I had a really good time! :D";
+		}
+		function puppy02() {
+			document.getElementById("testimonial").innerHTML = "I smell really nice now! :3";
+		}
+		function puppy03() {
+			document.getElementById("testimonial").innerHTML = "Look how fluffy I am! :)";
+		}
+		function puppy04() {
+			document.getElementById("testimonial").innerHTML = "I made some new friends! &#60;3";
+		}
+		function puppy05() {
+			document.getElementById("testimonial").innerHTML = "I was a little scared at first... but I'm glad I did it! =^.^=";
+		}
+		function puppy06() {
+			document.getElementById("testimonial").innerHTML = "I'm confused... what just happened? @_@";
+		}
+		</script>
     </body>
 </html>
