Added validation for booking Contact Us the address fixed.

--- a/contactus.html
+++ b/contactus.html
@@ -48,7 +48,7 @@
 
                     <li><h3>Address</h3>
                         <p>1922 Mountain Hwy
-                    North Vancouver, BC VJ 2M8</p>
+                    North Vancouver, BC V7J 2M8</p>
                     </li>
                     
                     <li><h3>Telephone</h3>
