--- a/booking.html
+++ b/booking.html
@@ -45,13 +45,15 @@
                 The form contains the calendar and the time, where the user can input
                 their wanted appointment and submit it into the database.
                 -->
-                <form>
+                <form method="post"
+                action="http://webdevbasics.net/scripts/demo.php">
                 <h2>Booking</h2>
                     <label for="Date">Choose a Date</label>
-                        <input type="date" name="Date" id="Date">
+                        <input type="date" name="Date" id="Date" required>
                         <br>
                     <label for="Time">Choose a Time</label>
-                        <input type="time" name="Time" id="Time">
+                        <input type="time" name="Time" id="Time" required>
+                        <br>
                         <br>
                         <input type="submit" value="Submit">
                 </form>
