Fixed operating hours.

--- a/contactus.html
+++ b/contactus.html
@@ -60,7 +60,8 @@
                     </li>
                     
                     <li><h3>Hours of Operation</h3>
-                        <p>Monday - Saturday: 9:30am - 5:00pm</p>
+                        <p>Monday - Saturday:</p>
+                        <p>9:30am - 5:00pm</p>
                         <p>Sunday: Closed</p>
                     </li>
                     
