added mailto link

--- a/contactus.html
+++ b/contactus.html
@@ -56,7 +56,7 @@
                     </li>
                     
                     <li><h3>Email</h3>
-                        <p>jojosdoggrooming@yahoo.com</p>
+                        <p><a href="mailto:jojosdoggrooming@yahoo.com?Subject=Customer%20aMail">jojosdoggrooming@yahoo.com</a></p>
                     </li>
                     
                     <li><h3>Hours of Operation</h3>
