--- a/accountEdit.html
+++ b/accountEdit.html
@@ -44,6 +44,7 @@
 				<h2>Account</h2>
 				<!--Form for editting account information-->
 					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp" onsubmit="return register()">
+					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp" onsubmit="return register()">
 						<fieldset>
 						<legend>Owner</legend>
 					    <div id="firstmsg" style="color:Red;display:none">Please enter your first name</div>
@@ -64,7 +65,7 @@
 						<input type="text" name="phone" id="phone" size="60" required="required" onblur="validatePhone()" onfocus="focusPhone()">
 						<br>
 						<br>
-					    <div id="emailregmsg" style="color:Red;display:none">Please enter an email address</div>
+					    <div id="emailregmsg" style="color:Red;display:none">Please enter a valid email address</div>
                         <label for="email">Email:</label>
 					    <br>
 					    <input type="text" name="signinemail" id="signinemail" size="30" required="required" onblur="validateRegEmail()" onfocus="focusRegEmail()">
@@ -76,7 +77,7 @@
 						<input type="password" name="pass" id="pass" size="60" required="required" onblur="validateRegPassword()" onfocus="focusRegPassword()">
 						<br>
 						<br>
-					    <div id="passconmsg" style="color:Red;display:none">Please confirm your password</div>
+					    <div id="passconmsg" style="color:Red;display:none">Password does not match</div>
 						<label for="confirmpass">Confirm Password:</label>
 						<br>
 						<input type="password" name="confirmpass" id="confirmpass" size="60" required="required" onblur="validateConPassword()" onfocus="focusConPassword()">
