validates phone number

--- a/accountEdit.html
+++ b/accountEdit.html
@@ -59,7 +59,7 @@
 						<input type="text" name="lastname" id="lastname" size="60" required="required" onblur="validateLastName()" onfocus="focusLastName()">
 						<br>
 						<br>
-					    <div id="phonemsg" style="color:Red;display:none">Please enter a phone number</div>
+					    <div id="phonemsg" style="color:Red;display:none">Please enter a valid phone number ex:123-123-1234</div>
 						<label for="phone">Phone Number:</label>
 						<br>
 						<input type="text" name="phone" id="phone" size="60" required="required" onblur="validatePhone()" onfocus="focusPhone()">
