added a regex for phone number

--- a/accountEdit.html
+++ b/accountEdit.html
@@ -44,7 +44,6 @@
 				<h2>Account</h2>
 				<!--Form for editting account information-->
 					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp" onsubmit="return register()">
-					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp" onsubmit="return register()">
 						<fieldset>
 						<legend>Owner</legend>
 					    <div id="firstmsg" style="color:Red;display:none">Please enter your first name</div>
@@ -59,7 +58,7 @@
 						<input type="text" name="lastname" id="lastname" size="60" required="required" onblur="validateLastName()" onfocus="focusLastName()">
 						<br>
 						<br>
-					    <div id="phonemsg" style="color:Red;display:none">Please enter a valid phone number ex:123-123-1234</div>
+					    <div id="phonemsg" style="color:Red;display:none">Please enter a valid phone number ex:1234567890</div>
 						<label for="phone">Phone Number:</label>
 						<br>
 						<input type="text" name="phone" id="phone" size="60" required="required" onblur="validatePhone()" onfocus="focusPhone()">
