added required = "required"

--- a/booking.html
+++ b/booking.html
@@ -49,10 +49,10 @@
                 action="http://webdevbasics.net/scripts/demo.php">
                 <h2>Booking</h2>
                     <label for="Date">Choose a Date</label>
-                        <input type="date" name="Date" id="Date" required>
+                        <input type="date" name="Date" id="Date" required ="required">
                         <br>
                     <label for="Time">Choose a Time</label>
-                        <input type="time" name="Time" id="Time" required>
+                        <input type="time" name="Time" id="Time" required="required">
                         <br>
                         <br>
                         <input type="submit" value="Submit">
