changed link to a button

--- a/signIn.html
+++ b/signIn.html
@@ -113,7 +113,7 @@
 						<br>
 						<br>
 						<!--link adds another dog field for registration form-->
-						<a href="#">Add Dog</a>
+						<input type="button" value="Add Dog" onclick="">
 					</fieldset>
 					<br>
 					<input type="submit" value="Register">
