Time is dropdown

--- a/booking.html
+++ b/booking.html
@@ -51,8 +51,19 @@
                     <label for="Date">Choose a Date</label>
                         <input type="date" name="Date" id="Date" required ="required">
                         <br>
+                        <br>
                     <label for="Time">Choose a Time</label>
-                        <input type="time" name="Time" id="Time" required="required">
+                        <select size="1" name="time" id="time" required ="required">
+                            <option>Select time</option>
+                            <option value="9:00">9:00</option>
+                            <option value="10:00">10:00</option>
+                            <option value="11:00">11:00</option>
+                            <option value="12:00">12:00</option>
+                            <option value="1:00">1:00</option>
+                            <option value="2:00">2:00</option>
+                            <option value="3:00">3:00</option>
+                            <option value="4:00">4:00</option>
+                        </select>
                         <br>
                         <br>
                         <input type="submit" value="Submit">
