Select time is no longer a valid "time".

--- a/booking.html
+++ b/booking.html
@@ -54,7 +54,7 @@
                         <br>
                     <label for="Time">Choose a Time</label>
                         <select size="1" name="time" id="time" required ="required">
-                            <option>Select time</option>
+                            <option value="" disabled selected hidden>Select time</option>
                             <option value="9:00">9:00</option>
                             <option value="10:00">10:00</option>
                             <option value="11:00">11:00</option>
