--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!--Welcome section-->
             <div id="leftcol">
 				<h2>Welcome</h2>
-				<p>Vivamus purus mi, fringilla id viverra at, blandit finibus orci. In consequat ultrices ante. Aenean sit amet tortor elit. Curabitur et dui sed odio rhoncus mollis non a erat. Nam vitae lacus tincidunt neque accumsan aliquam in et ipsum. Nam lobortis, odio non varius maximus, ex neque viverra quam, eget sollicitudin sapien erat ac tellus. Phasellus lobortis porttitor nibh, eget ullamcorper justo consectetur id.</p>
+                <p>Here at Jojo’s Dog Grooming, your dog’s well-being is our top concern. Our certified groomer uses top of the line products to ensure that your pups will leave healthy, smelling and feeling amazing. Your dog will always have a day of tail-wagging fun when you choose Jojo’s Dog Grooming. When you bring your dog to the groomers, you expect exceptional service, along with reasonable and affordable prices. That’s why at Jojo’s Dog Grooming, we provide the utmost attention to your dog’s needs.</p>
 				<img src="Images/placeholder.jpg" alt="Place image here">
 			</div>
             
