submit button will not submit invalid information

--- a/signIn.html
+++ b/signIn.html
@@ -59,7 +59,7 @@
 			<div id="rightcol">
 				<!--Regstration form begins here-->
 				<h2>Register</h2>
-					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp" onsubmit="return register()">
+					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp" onsubmit="return validateRegister()">
 						<fieldset>
 						<legend>Owner</legend>
 					    <div id="firstmsg" style="color:Red;display:none">Please enter your first name</div>
