fixed the submit button

--- a/signIn.html
+++ b/signIn.html
@@ -83,7 +83,7 @@
 					    <div id="emailregmsg" style="color:Red;display:none">Please enter a valid email address</div>
                         <label for="email">Email:</label>
 					    <br>
-					    <input type="text" name="signinemail" id="signinemail" size="30" required="required" onblur="validateRegEmail()" onfocus="focusRegEmail()">
+					    <input type="text" name="registeremail" id="registeremail" size="30" required="required" onblur="validateRegEmail()" onfocus="focusRegEmail()">
 						<br>
 						<br>
 					    <div id="passregmsg" style="color:Red;display:none">Please enter a password</div>
