--- a/accountEdit.html
+++ b/accountEdit.html
@@ -43,7 +43,7 @@
 			<div id="rightcol">
 				<h2>Account</h2>
 				<!--Form for editting account information-->
-					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp" onsubmit="return register()">
+					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp" onsubmit="return validateRegister()">
 						<fieldset>
 						<legend>Owner</legend>
 					    <div id="firstmsg" style="color:Red;display:none">Please enter your first name</div>
@@ -67,7 +67,7 @@
 					    <div id="emailregmsg" style="color:Red;display:none">Please enter a valid email address</div>
                         <label for="email">Email:</label>
 					    <br>
-					    <input type="text" name="signinemail" id="signinemail" size="30" required="required" onblur="validateRegEmail()" onfocus="focusRegEmail()">
+					    <input type="text" name="registeremail" id="registeremail" size="30" required="required" onblur="validateRegEmail()" onfocus="focusRegEmail()">
 						<br>
 						<br>
 					    <div id="passregmsg" style="color:Red;display:none">Please enter a password</div>
