--- a/account.html
+++ b/account.html
@@ -57,7 +57,7 @@
 					<li><label>Dog Breed: </label></li>
 					<li><!--Dog's breed--></li>
 					<!--Additional dogs will appear underneath-->
-					<a href="accountEdit.html">Edit Account</a>
+					<a href="accountedit.html">Edit Account</a>
 				</ul>
 			</div>
         </div>
