--- a/accountEdit.html
+++ b/accountEdit.html
@@ -38,7 +38,7 @@
 		<div id="content">
             <div id="leftcol">
 				<p>Please make sure all required fields are filled before submitting changes to the account.</p>
-				<img src="images/placeholder.jpg" width="250" height="250" alt="placeholder">
+				<img src="Images/placeholder.jpg" width="250" height="250" alt="placeholder">
 			</div>
 			<div id="rightcol">
 				<h2>Account</h2>
