--- a/account.html
+++ b/account.html
@@ -37,7 +37,7 @@
         
 		<div id="content">
             <div id="leftcol">
-				<img src="images/placeholder.jpg" width="250" height="250" alt="placeholder">
+				<img src="Images/placeholder.jpg" width="250" height="250" alt="placeholder">
 			</div>
             
 			<div id="rightcol">
