--- a/Services/Pricing.html
+++ b/Services/Pricing.html
@@ -20,9 +20,9 @@
         <nav>
             <div class="dropdown">
                 <ul id="nav">
-                    <li><a href="aboutus.html">About Us</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="services.html" id="drop">Services</a>
+                    <li><a href="../aboutus.html">About Us</a></li>
+                    <li><a href="../testimonials.html">Testimonials</a></li>
+                    <li><a href="../services.html" id="drop">Services</a>
 					    <div class="dropdowncontent">
 						    <ul>
                                 <li><a href="pricing.html">Pricing</a></li>
@@ -30,7 +30,7 @@
 					            <li><a href="faqs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
-                    <li><a href="contactus.html">Contact Us</a></li>
+                    <li><a href="../contactus.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
