--- a/testimonials.html
+++ b/testimonials.html
@@ -26,9 +26,9 @@
                     <li><a href="services.html" id="drop">Services</a>
 					    <div class="dropdowncontent">
 						    <ul>
-                                <li><a href="pricing.html">Pricing</a></li>
-					            <li><a href="booking.html">Booking</a></li>
-					            <li><a href="faqs.html">FAQs</a></li>
+                                <li><a href="Services/pricing.html">Pricing</a></li>
+					            <li><a href="Services/booking.html">Booking</a></li>
+					            <li><a href="Services/faqs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
                     <li><a href="contactus.html">Contact Us</a></li>
