--- a/testimonials.html
+++ b/testimonials.html
@@ -74,25 +74,6 @@
                 <a href="#"><img src="Images/twitter.png"
                  width="50" height="50" alt="Twitter"></a></p>
 		</footer>
-		<script>
-		function puppy01() {
-			document.getElementById("testimonial").innerHTML = "I had a really good time! :D";
-		}
-		function puppy02() {
-			document.getElementById("testimonial").innerHTML = "I smell really nice now! :3";
-		}
-		function puppy03() {
-			document.getElementById("testimonial").innerHTML = "Look how fluffy I am! :)";
-		}
-		function puppy04() {
-			document.getElementById("testimonial").innerHTML = "I made some new friends! &#60;3";
-		}
-		function puppy05() {
-			document.getElementById("testimonial").innerHTML = "I was a little scared at first... but I'm glad I did it! =^.^=";
-		}
-		function puppy06() {
-			document.getElementById("testimonial").innerHTML = "I'm confused... what just happened? @_@";
-		}
-		</script>
+		<script src="Script/testimonials.js"></script>
     </body>
 </html>
