--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Jojo's Dog Grooming</title>
         <link rel="stylesheet" href="Style/base.css" media="screen">
         <link rel="stylesheet" href="Style/printstyle.css" media="print">
+        <link rel="stylesheet" href="Style/footernav.css" media="screen">
     </head>
     
     <body>
@@ -65,7 +66,19 @@ Vivamus purus mi, fringilla id viverra at, blandit finibus orci. In consequat ul
 
         <!--Establishes the footer section-->
 		<footer>
-		    <p>Follow us:</p>
+		    <div id="footernav">
+                <ul>
+                    <li><a href="signIn.html">Sign in / Register</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="services.html">Services</a>
+                    <li><a href="pricing.html">Pricing</a></li>
+					<li><a href="booking.html">Booking</a></li>
+					<li><a href="faqs.html">FAQs</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
+                </ul>
+            </div>
+            <p>Follow us:</p>
             <p><a href="#"><img src="Images/facebook.png"
                  width="50" height="50" alt="Facebook"></a>
                 <a href="#"><img src="Images/instagram.png"
