--- a/Services/FAQs.html
+++ b/Services/FAQs.html
@@ -4,15 +4,15 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - FAQs</title>
-        <link rel="stylesheet" href="Style/base.css" media="screen">
-        <link rel="stylesheet" href="Style/printstyle.css" media="print">
+        <link rel="stylesheet" href="../Style/base.css" media="screen">
+        <link rel="stylesheet" href="../Style/printstyle.css" media="print">
     </head>
     <body>
         <div id="signin">
-            <a href="signin.html">sign in/register</a>
+            <a href="../signin.html">sign in/register</a>
         </div> 
         <header>
-			<a href="index.html"><h1><img src="Images/logo.png"
+			<a href="../index.html"><h1><img src="../Images/logo.png"
                  width="200" height="200" alt="Jojo's Dog Grooming-Home"></h1></a>
 		</header>
         <nav>
@@ -36,7 +36,7 @@
         <div id="content">
             <div id="leftcol">
 				<p>Find the answers to your questions here!<p>
-				<img src="Images/placeholder.jpg" alt="add image here" width="250" height="250">
+				<img src="../Images/placeholder.jpg" alt="add image here" width="250" height="250">
 			</div>
             
             <div id="rightcol">
@@ -71,11 +71,11 @@
         </div>
         <footer>
 		    <p>Follow us:</p>
-            <p><a href="#"><img src="Images/facebook.png"
+            <p><a href="#"><img src="../Images/facebook.png"
                  width="50" height="50" alt="Facebook"></a>
-                <a href="#"><img src="Images/instagram.png"
+                <a href="#"><img src="../Images/instagram.png"
                  width="50" height="50" alt="instagram"></a>
-                <a href="#"><img src="Images/twitter.png"
+                <a href="#"><img src="../Images/twitter.png"
                  width="50" height="50" alt="Twitter"></a></p>
 		</footer>
     </body>
