Added footer links to all the pages.

--- a/testimonials.html
+++ b/testimonials.html
@@ -66,6 +66,18 @@
 			</div>
         </div>
 		<footer>
+            <div id="footernav">
+                <ul>
+                    <li><a href="signIn.html">Sign in / Register</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="services.html">Services</a>
+                    <li><a href="pricing.html">Pricing</a></li>
+					<li><a href="booking.html">Booking</a></li>
+					<li><a href="faqs.html">FAQs</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
+                </ul>
+            </div>
 		    <p>Follow us:</p>
             <p><a href="#"><img src="Images/facebook.png"
                  width="50" height="50" alt="Facebook"></a>
