--- a/accountEdit.html
+++ b/accountEdit.html
@@ -113,6 +113,6 @@
                 <a href="#"><img src="Images/twitter.png"
                  width="50" height="50" alt="Twitter"></a></p>
 		</footer>
-        <script src="signIn.js"></script>
+        <script src="Script/signIn.js"></script>
     </body>
 </html>
